# src/modules/auth/auth.routes.js
@@ -7,4 +7,8 @@ router.post('/register', authController.register);
 
 router.post('/login', authController.login);
 
+router.post('/forgot-password', authController.forgotPassword);
+
+router.post('/reset-password', authController.resetPassword);
+
 module.exports = router;
